--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: python
-matrix:
-  include:
-    - python: 3.7
-      dist: xenial
-      sudo: true
+python:
+  - "3.7"
+dist: xenial
+sudo: true
 install:
   - pip install -r requirements.txt
 script: python setup.py test
